fix: fix width issue on mobile devices

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -30,6 +30,7 @@ p.sub-header {
   top: 0px;
   width: 70px;
   animation: move-to-top 1s ease, rotate 4s ease 1;
+  cursor: pointer;
 }
 
 @keyframes rotate {
