--- a/src/sass/layout/_banner.scss
+++ b/src/sass/layout/_banner.scss
@@ -90,7 +90,7 @@
     margin-bottom: (_size(wrapper-edges, medium) * -1);
 
     .inner {
-      width: 100%;
+      width: 90%;
       margin-left: 1em;
     }
   }
